<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2016 Nextzy

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DefaultCardView"
    android:id="@+id/dashboard_cv_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_margin_padding_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding_normal"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_margin_padding_large"
            android:paddingRight="@dimen/default_margin_padding_large">

            <TextView
                style="@style/BodyTextView.Blue.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_name" />
            
            <View style="@style/EmptyView" />

            <TextView
                android:id="@+id/dashboard_tv_user_name"
                style="@style/BodyTextView.Black.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding_small"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_margin_padding_large"
            android:paddingRight="@dimen/default_margin_padding_large">

            <TextView
                style="@style/BodyTextView.Blue.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_client_number" />

            <View style="@style/EmptyView" />

            <TextView
                android:id="@+id/dashboard_tv_user_client_number"
                style="@style/BodyTextView.Black.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dashboard_btn_buy"
                style="@style/BlueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding_normal"
                android:layout_weight="1"
                android:text="@string/dashboard_buy" />

            <Button
                android:id="@+id/dashboard_btn_sell"
                style="@style/BlueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding_normal"
                android:layout_weight="1"
                android:text="@string/dashboard_sell" />

            <Button
                android:id="@+id/dashboard_btn_switch"
                style="@style/BlueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding_normal"
                android:layout_weight="1"
                android:text="@string/dashboard_switch" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>