<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2016 Nextzy

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DefaultCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin_padding_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/purchased_fund_detail_tv_symbol"
            style="@style/HeaderTextView.Black.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_padding_large"
            android:layout_marginRight="@dimen/default_margin_padding_large"
            android:layout_marginTop="@dimen/default_margin_padding_large"
            android:text="@string/sample" />

        <TextView
            android:id="@+id/purchased_fund_detail_tv_name"
            style="@style/BodyTextView.Black.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_padding_large"
            android:layout_marginRight="@dimen/default_margin_padding_large"
            android:layout_marginTop="@dimen/default_margin_padding_small"
            android:text="@string/sample" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding_normal"
            android:layout_marginLeft="@dimen/default_margin_padding_large"
            android:layout_marginRight="@dimen/default_margin_padding_large"
            android:layout_marginTop="@dimen/default_margin_padding_normal"
            android:orientation="vertical"
            android:padding="@dimen/default_margin_padding_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/BodyTextView.Blue.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchased_fund_detail_risk_rate" />

                <View style="@style/EmptyView" />

                <TextView
                    android:id="@+id/purchased_fund_detail_tv_risk_rating"
                    style="@style/BodyTextView.Black.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:orientation="horizontal">

                <TextView
                    style="@style/BodyTextView.Blue.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchased_fund_detail_star_rate" />

                <View style="@style/EmptyView" />

                <TextView
                    android:id="@+id/purchased_fund_detail_tv_star_rating"
                    style="@style/BodyTextView.Black.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:orientation="horizontal">

                <TextView
                    style="@style/BodyTextView.Blue.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchased_fund_detail_cut_off_time" />

                <View style="@style/EmptyView" />

                <TextView
                    android:id="@+id/purchased_fund_detail_tv_cut_off_time"
                    style="@style/BodyTextView.Black.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:orientation="horizontal">

                <TextView
                    style="@style/BodyTextView.Blue.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchased_fund_detail_latest_nav" />

                <View style="@style/EmptyView" />

                <TextView
                    android:id="@+id/purchased_fund_detail_tv_latest_nav"
                    style="@style/BodyTextView.Black.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:orientation="horizontal">

                <TextView
                    style="@style/BodyTextView.Blue.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchased_fund_detail_in_port_amount" />

                <View style="@style/EmptyView" />

                <TextView
                    android:id="@+id/purchased_fund_detail_tv_in_port_amount"
                    style="@style/BodyTextView.Green.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/purchased_fund_detail_btn_download_fact_sheet"
            style="@style/BlueGrayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding_large"
            android:layout_marginLeft="@dimen/default_margin_padding_large"
            android:layout_marginRight="@dimen/default_margin_padding_large"
            android:text="@string/purchased_fund_detail_download_fact_sheet" />

    </LinearLayout>
</android.support.v7.widget.CardView>